Fix icon align bug in form submit button

--- a/assets/dev/scss/frontend/_forms.scss
+++ b/assets/dev/scss/frontend/_forms.scss
@@ -283,14 +283,6 @@
 			justify-content: center;
 		}
 
-		.elementor-align-icon-right {
-			order: getValueByDirection( 2 ,0 );
-		}
-
-		.elementor-align-icon-left {
-			order: getValueByDirection( 0 ,2 );
-		}
-
 		&.elementor-size- {
 
 			&xs {
