--- a/assets/dev/scss/frontend/widgets/button.scss
+++ b/assets/dev/scss/frontend/widgets/button.scss
@@ -19,6 +19,7 @@
 
 	&-content-wrapper {
 		display: flex;
+		justify-content: center;
 	}
 
 	&-icon {
